fixed bottom spacing

--- a/frontend/src/components/LoginFormModal/LoginFormPage.css
+++ b/frontend/src/components/LoginFormModal/LoginFormPage.css
@@ -4,10 +4,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     height: 682px;
     width: 574px;
-
 }
 
 .close-modal{
@@ -17,17 +16,12 @@
 
 #login-text{
     display: flex;
+    position: relative;
     justify-content: flex-end;
-    width: 238px;
-    height: 37px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont, 'Segoe UI', Roboto,Oxygen, Ubuntu, Cantarell, 'Open Sans','Helvetica Neue', sans-serif;
+    width: 250px;
 }
 
-#divider{
-    width:572px;
-   
-    
-}
 
 .errors{
     color: red;
@@ -109,6 +103,37 @@
     cursor: pointer;
 }
 
+.login-ruler {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 0.5px solid #c8c8c8;
+    width: 244px;
+}
+
+.login-developer-links {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#login-developer-button:hover {
+    background: #ededed;
+}
+
+#login-developer-button {
+    font-size: 15px;
+    border-radius: 11px;
+    background-color: white;
+    width: 518px;
+    height: 48px;
+    border: 0.5px solid #000000;
+    font-family: -apple-system, BlinkMacSystemFont, 'SegoeUI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+}
+
 .animate-bottom {
     position: relative;
     animation: animatebottom 0.4s;
@@ -131,8 +156,3 @@
     width: 100%;
     height: 100%;
 } */
-.demouser{
-    
-    margin-bottom: 188px;
-
-}
